[project]
name = "coffee-counter"
version = "0.1.0"
description = ""
authors = [
    {name = "Devon",email = "ds.pydev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
